# airflow

./: .gitignore  constraints.txt  pyproject.toml
airflow/: dags_bash_operator.py
airflow/dags/: dags_base_branch_operator.py  dags_bash_operator.py  dags_bash_select_fruit.py  dags_bash_with_macro_eg1.py  dags_bash_with_macro_eg2.py  dags_bash_with_template.py  dags_bash_with_xcom.py  dags_branch_python_operator.py  dags_conn_test.py  dags_email_operator.py  dags_python_import_func.py  dags_python_operator.py  dags_python_show_templates.py  dags_python_task_decorator.py  dags_python_template.py  dags_python_with_branch_decorator.py  dags_python_with_macro.py  dags_python_with_op_args.py  dags_python_with_op_kwargs.py  dags_python_with_xcom_eg1.py  dags_python_with_xcom_eg2.py
airflow/plugins/common/: common_func.py
airflow/plugins/shell/: select_fruit.sh
